<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="at.sum.android.cysmn.gui.ChooseFactionActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_a_faction_runner"
        android:id="@+id/choose_faction_btn_runner"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="108dp"
        android:layout_alignRight="@+id/choose_faction_btn_online_player"
        android:layout_alignEnd="@+id/choose_faction_btn_online_player"
        android:onClick="btnRunner"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_a_faction_online_player"
        android:id="@+id/choose_faction_btn_online_player"
        android:layout_above="@+id/choose_faction_btn_runner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="123dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="btnOnlinePlayer"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/_a_choose_faction"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
